--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "serveur.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon serveur.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +20,9 @@
   },
   "homepage": "https://github.com/NerVod/projet_backend#readme",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "nodemon": "^2.0.15",
