--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "serveur.js",
-  "type": "module",
   "scripts": {
     "start": "nodemon serveur.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:server": "nodemon --ignore sessions/ serveur.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +20,16 @@
   },
   "homepage": "https://github.com/NerVod/projet_backend#readme",
   "dependencies": {
-    "connect-mongo": "^4.6.0",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1"
+    "pug": "^3.0.2",
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
