--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/NerVod/projet_backend#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^3.2.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
