--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.2.1",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
+    "randomcolor": "^0.6.2",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
