--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +35,7 @@
     "randomcolor": "^0.6.2",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
+    "socket.io-cookie-parser": "^1.0.0",
     "uuid": "^8.3.2"
   }
 }
