--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.0.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.6",
+    "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -35,7 +36,6 @@
     "randomcolor": "^0.6.2",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
-    "socket.io-cookie-parser": "^1.0.0",
-    "uuid": "^8.3.2"
+    "socket.io-cookie-parser": "^1.0.0"
   }
 }
