--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projet_backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "projet jeu",
   "main": "serveur.js",
   "scripts": {
     "start": "node serveur.js",
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/NerVod/projet_backend.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "NerVod",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/NerVod/projet_backend/issues"
@@ -37,5 +37,9 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
     "socket.io-cookie-parser": "^1.0.0"
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": "16.13.0"
   }
 }
