--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
     "randomcolor": "^0.6.2",
+    "serve-favicon": "^2.5.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
     "socket.io-cookie-parser": "^1.0.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": "16.13.0"
   }
