--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projet_backend",
   "version": "1.0.0",
-  "description": "projet jeu",
+  "description": "",
   "main": "serveur.js",
   "scripts": {
     "start": "node serveur.js",
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/NerVod/projet_backend.git"
   },
   "keywords": [],
-  "author": "NerVod",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/NerVod/projet_backend/issues"
@@ -34,12 +34,8 @@
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
     "randomcolor": "^0.6.2",
-    "serve-favicon": "^2.5.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
     "socket.io-cookie-parser": "^1.0.0"
-  },
-  "engines": {
-    "node": "^16.13.0"
   }
 }
